.k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  ports:
    - port: 80
  selector:
    app: homepage
  type: NodePort
